--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -490,8 +490,9 @@ text-shadow: 0.5px 0 #181111;
 .contact .content h2 {
     
     font-size: 40px;
-    font-weight: 500;
+    font-weight: 590;
     color:white;
+    font-family: 'Caveat', cursive;
     text-align: center;
     text-shadow: 2px 1px #050505;
 }
@@ -506,7 +507,7 @@ text-shadow: 0.5px 0 #181111;
 {
     width: 40%;
     padding: 40px;
-    background:  rgba(195, 201, 220, 0.6);
+    background:  rgba(239, 243, 242, 0.6);
     border-radius: 5px;
     margin-top: 30px;
     box-shadow: 8px 8px 10px 0px rgba(4, 12, 9, 0.4);
@@ -515,14 +516,15 @@ text-shadow: 0.5px 0 #181111;
 }
 .contactForm h2{
     
-    font-size: 25px;
-    font-weight: 600;
+    font-size:35px;
+    font-weight: 500;
+    font-family: 'Caveat', cursive;
     text-align: center;
 }
 .contactForm span{
     
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
 }
 .contactForm .inputBox
@@ -548,7 +550,7 @@ text-shadow: 0.5px 0 #181111;
 .contactForm .inputBox input[type="submit"]{
 
     width: 30%;
-    font-weight: 600;
+    font-weight: 500;
     background: rgb(66, 216, 186);
     text-shadow: 1px 1px #050505;
     color: white;
